Add Vercel Blog storage for images

--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@payloadcms/db-mongodb": "^3.69.0-canary.8",
     "@payloadcms/next": "^3.69.0-canary.8",
     "@payloadcms/richtext-lexical": "^3.69.0-canary.8",
+    "@payloadcms/storage-vercel-blob": "^3.69.0-canary.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@vercel/blob": "^2.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
